cache exchange rates + transaction query optimization